src/styles/global.css
body {
  font-family: "Inter";
}

.container {
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 20px;
}

.divider-line {
  width: 99%;
  height: 1px;
  background: #bab2e7;
  margin: 35px auto 40px;
}

/* DARK MODE*/

body.dark {
  background-color: #111827;
  color: white;
}

body.dark .divider-line {
  background: #7c70b3;
}

body.dark .footer {
  background-color: #1f2937;
}

body.dark .footer-bottom-right a:first-child {
  color: white;
}

body.dark .footer-bottom-left a {
  color: #af0c48;
}

body.dark p {
  color: #d1d5db;
}

body.dark h2 {
  color: #4338ca;
}

body.dark h3 {
  color: #ffe86e;
}

body.dark .header-hire-text {
  border-color: #ffe86e;
  color: #ffe86e;
}

body.dark .hero-left-text {
  color: #ffe86e;
}

body.dark .hero-left-button {
  border-color: white;
  color: white;
}

body.dark .hero-left-button a {
  text-decoration: none;
  color: white;
}

body.dark .projects-row-details a {
  color: white;
}

body.dark .projects-row-pills p {
  border-color: white;
}

body.dark .profile-label {
  color: #0077b5;
}

.mode-btn-circle {
  transition: transform 0.3s;
}

body.dark .mode-btn-circle {
  right: 38px;
}

/*TOGGLE BAR*/

.toggle-bar-right {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  margin: 30px 0;
}

.mode-btn {
  width: 65px;
  height: 28px;
  border: none;
  border-radius: 50px;
  background-color: #4338ca;
  position: relative;
  cursor: pointer;
  padding: 0;
}

.mode-btn-circle {
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #ffe86e;
  position: absolute;
  top: 50%;
  right: 8px;
  transform: translateY(-50%);
  transition: right 0.3s;
}

.mode-text {
  font-weight: 700;
  font-size: 15px;
  letter-spacing: 1px;
  color: #777777;
}

.lang-btn {
  background: none;
  border: none;
  font-weight: 700;
  font-size: 15px;
  letter-spacing: 1px;
  color: #4338ca;
  line-height: 100%;
  cursor: pointer;
  font-family: "Inter";
}

.lang-text {
  color: #777777;
}

/* HEADER */

.header-parts {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-right {
  display: flex;
  align-items: center;
}

.header-text {
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  color: #777777;
  text-decoration: none;
  margin-right: 75px;
}

.header-hire-text {
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  color: #3730a3;
  text-decoration: none;
  border: 1px solid #3730a3;
  padding: 12px 32px;
  border-radius: 6px;
}

.header {
  margin-bottom: 100px;
}

/* HERO */

.hero-parts {
  display: flex;
  justify-content: space-between;
}

.hero-left {
  max-width: 50%;
}

.hero-right {
  max-width: 50%;
}

.hero-left-name {
  display: flex;
  align-items: center;
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
  color: #4338ca;
}

.hero-left-name::before {
  content: "";
  flex: none;
  width: 102px;
  height: 1px;
  background: #4f46e5;
  margin-right: 10px;
}

.hero-left-text {
  font-weight: 700;
  font-size: 72px;
  line-height: 72px;
  color: #1f2937;
  margin: 50px 0;
}

.hero-left-text span {
  display: block;
}

.hero-left-desc {
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  color: #6b7280;
  margin-bottom: 50px;
}

.hero-left-buttons {
  display: flex;
  align-items: center;
  gap: 40px;
}

.hero-left-button {
  display: inline-flex;
  align-items: center;
  gap: 8px;
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  color: #3730a3;
  text-decoration: none;
  border: 1px solid #3730a3;
  padding: 12px 16px;
  border-radius: 6px;
  background: none;
}

.hero-left-button img {
  width: 24px;
  height: 24px;
  object-fit: contain;
}

.hero-left-hire-button {
  font-weight: 500;
  font-size: 18px;
  line-height: 28px;
  color: white;
  text-decoration: none;
  border: 1px solid #3730a3;
  padding: 12px 32px;
  border-radius: 6px;
  background: none;
  background-color: #3730a3;
}

.hero-left-button a {
  text-decoration: none;
  color: #3730a3;
}

.hero-left-hire-button a {
  text-decoration: none;
  color: white;
}

.hero-right img {
  display: block;
  margin-top: 50px;
}

.hero {
  margin-bottom: 100px;
}

/* SKILLS */

.skills h2 {
  font-weight: 600;
  font-size: 48px;
  line-height: 48px;
}

.skills-row {
  display: flex;
  gap: 150px;
}

.skill h3 {
  margin: 25px 0;
  font-weight: 500;
  font-size: 30px;
  line-height: 28px;
  color: #4338ca;
}

.skill p {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  color: #6b7280;
}

/* PROFILE */

.profile h2 {
  font-weight: 600;
  font-size: 48px;
  line-height: 48px;
}

.profile-parts {
  display: flex;
  gap: 80px;
}

.profile-parts h3 {
  margin: 25px 0;
  font-weight: 500;
  font-size: 30px;
  line-height: 28px;
  color: #4338ca;
}

.profile-parts {
  display: flex;
}

.profile-left {
  flex: 0 0 45%;
}

.profile-right {
  flex: 0 0 45%;
}

.profile-left-row {
  display: grid;
  grid-template-columns: 165px 1fr;
  align-items: start;
  margin-bottom: 10px;
}

.profile-label {
  font-weight: 600;
  font-size: 18px;
  line-height: 200%;
  letter-spacing: 1%;
  color: black;
}

.profile-value {
  font-weight: 400;
  font-size: 18px;
  line-height: 200%;
  letter-spacing: 1%;
}

.profile-right p {
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  color: #6b7280;
}

/* PROJECTS */

.projects h2 {
  font-weight: 600;
  font-size: 48px;
  line-height: 48px;
  margin-bottom: 25px;
}

.projects-parts {
  display: flex;
  justify-content: space-between;
}

.projects-row h3 {
  margin: 25px 0;
  font-weight: 500;
  font-size: 30px;
  line-height: 28px;
  color: #4338ca;
}

.projects-row p {
  font-size: 14px;
  line-height: 125%;
  font-weight: 400;
  color: #6b7280;
  max-width: 300px;
}

.projects-row-pills {
  display: flex;
  gap: 6px;
  margin: 25px 0;
}

.projects-row-pills p {
  font-weight: 500;
  font-size: 14px;
  line-height: 100%;
  vertical-align: middle;
  color: #3730a3;
  border: 1px solid #3730a3;
  padding: 6px 18px;
  border-radius: 4px;
}

.projects-row-details {
  display: flex;
  justify-content: space-between;
}

.projects-row-details a {
  font-weight: 500;
  font-size: 16px;
  line-height: 16px;
}

/* FOOTER */

.footer {
  background-color: #f9f9f9;
  margin-top: 175px;
}
.footer-parts h2 {
  font-weight: 600;
  font-size: 42px;
  line-height: 125%;
  padding-top: 100px;
  padding-bottom: 75px;
  max-width: 500px;
}

.footer-bottom {
  display: flex;
  justify-content: space-between;
  padding-bottom: 125px;
}

.footer-bottom-right {
  display: flex;
  gap: 20px;
}

.footer-bottom-right a {
  font-weight: 500;
  font-size: 18px;
  line-height: 150%;
  letter-spacing: 1%;
  color: #00ab6b;
  text-decoration: none;
}

.footer-bottom-right a:first-child {
  color: #0a0a14;
}

.footer-bottom-right a:last-child {
  color: #0077b5;
}

.footer-bottom-left a {
  font-weight: 500;
  font-size: 20px;
  line-height: 100%;
  letter-spacing: 5%;
  color: #af0c48;
  text-decoration: underline solid;
}

/* MEDIA */

@media (max-width: 768px) {
  body {
    font-size: 16px;
    padding: 0;
  }

  .container {
    max-width: 100%;
    padding: 0 20px;
  }

  .skills h2,
  .profile h2,
  .projects h2 {
    text-align: center;
  }

  /* TOGGLE BAR */
  .toggle-bar-right {
    justify-content: space-around;
    align-items: center;
    gap: 12px;
  }

  .toggle-bar-right .divider {
    display: none;
  }

  /* HEADER */
  .header-parts {
    flex-direction: column;
    align-items: center;
    gap: 15px;
    margin-top: 50px;
  }

  .header-text,
  .header-hire-text {
    margin-right: 0;
  }

  .header-left {
    display: none;
  }

  .header-right {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
  }

  /* HERO */
  .hero-parts {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .hero-left,
  .hero-right {
    max-width: 100%;
  }

  .hero-right img {
    max-width: 100%;
    height: auto;
    display: block;
  }

  .hero-left-buttons {
    flex-direction: column;
    gap: 20px;
  }

  .hero-left-text {
    font-size: 48px;
    line-height: 1.2;
  }

  .hero-left-desc {
    font-size: 16px;
  }

  /* SKILLS */
  .skills-row {
    flex-direction: column;
    gap: 40px;
  }

  .skill {
    text-align: center;
  }

  .skill h3 {
    text-align: center;
  }

  .skill p {
    text-align: center;
  }

  /* PROFILE */
  .profile-parts {
    flex-direction: column;
    gap: 30px;
  }

  .profile-left,
  .profile-right {
    flex: 1 1 100%;
  }

  .profile h3 {
    text-align: center;
  }
  
  .profile-right p {
    text-align: center;
  }

  .profile-left-row {
    grid-template-columns: 1fr;
    row-gap: 10px;
  }

  /* PROJECTS */
  .projects-parts {
    flex-direction: column;
    gap: 30px;
  }

  .projects-row {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .projects-row-details {
    flex-direction: column;
    gap: 10px;
  }

  .projects-row-pills {
    flex-wrap: wrap;
    justify-content: center;
  }

  /* FOOTER */

  .footer {
    margin-top: 50px;
  }

  .footer-bottom {
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .footer-bottom-right {
    flex-direction: column;
    gap: 10px;
    align-items: center;
  }

  .footer-bottom-left {
    margin-bottom: 50px;
  }

  .footer-parts h2 {
    text-align: center;
  }
}

